--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,69 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 [x-cloak] {
     display: none;
+}
+
+.nav-pills .nav-link {
+    width: 100%;
+    text-align: left;
+    color: white !important;
+    background-color: transparent; 
+    border-radius: 0;
+    border-bottom: 1px solid #ddd; /* Adiciona um separador entre os itens */
+}
+.nav-pills .nav-link:last-child {
+    border-bottom: none; /* Remove a borda do último item */
+}
+
+.nav-pills .nav-link:hover {
+    color: white  !important;
+    background-color: #96b2cc !important; /* Cor ao passar o mouse (cinza claro) */
+}
+
+.nav-pills .nav-link.active {
+    color: white !important; /* Cor do texto ativo */
+    background-color: #6f8daa !important; /* Cor de fundo quando ativo */
+}
+
+.full-height {
+    height: 82vh; /* 100% da altura da viewport */
+}
+
+.full-height-row {
+    min-height: 82vh;
+}
+
+.imagem-circular {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: white;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid rgb(59, 59, 59);
+}
+
+.imagem-circular img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* preenche completamente e corta o excesso */
+    object-position: center; /* centraliza o foco */
+    transform: scale(2.1);
+}
+
+.imagem-circular:hover img {
+    transform: scale(1.4);
+}
+
+  .input-maior {
+    font-size: 2.1rem;     /* aumenta o tamanho da fonte */
+    padding: 1rem;         /* aumenta o "tamanho" do input */
+    height: auto;          /* deixa a altura se ajustar com padding */
+    border: 0;
 }
